cluster/apps/default/grocy/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grocy
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`grocy.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: grocy
          port: 80
  tls:
    secretName: ${SECRET_CERT}
